# CODER_IA_GEN

./: README.md  docker-compose.yml
back-fastapi/: pyproject.toml
back-fastapi/app/: __init__.py  dockerfile  main.py
back-fastapi/app/models/: count_table.py
coder-ia-gen/: package-lock.json
coder-ia-gen/src/: App.tsx
