[project]
name = "back-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "LenderDiam",email = "151174455+LenderDiam@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlalchemy",
    "psycopg2-binary"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
